error fixes and improve readability.

--- a/src/main/webapp/index_style.css
+++ b/src/main/webapp/index_style.css
@@ -7,12 +7,10 @@ body, html {
 .header {
     height: 60px;
     width: 100%;
-    text-align: center;
-
-   
+    text-align: center; 
 }
 
-.YTimage{
+.YTlogo{
 display: inline-block;
 width:202px;
 height:50px;
@@ -40,11 +38,9 @@ color:var(--co-text-light, #FFFFFF);
 letter-spacing:normal
 }
 
-
 #main {
   transition: margin-right .5s;
 }
-
 
 iframe {
 display:block;
@@ -69,7 +65,7 @@ margin-top:2%;
   transition: 0.5s;
 }
 
-#openbtn {
+#sidebarBtn {
   top: 0;
   font-size: 20px;
   cursor: pointer;
@@ -79,14 +75,11 @@ margin-top:2%;
   border: none;
   margin:0px;
   float: right;
- 
 }
 
-#openbtn:hover {
+#sidebarBtn:hover {
   background-color: #444;
 }
-
-
 
 #tabs li { 
     font:500 20px/30px Roboto;
@@ -96,10 +89,4 @@ margin-top:2%;
     color: #818181;
      display: block;
     transition: 0.3s;
-  
 }
-
-
-
-
-
